<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="menuSend">Send</string>
    <string name="menuSaveToSd">Save to SD card</string>
    <string name="xposed_not_active">The latest version of Xposed is currently not active. Did you install the Framework and reboot?</string>
    <string name="welcome">Welcome to the <b>Xposed Installer</b>!\nPlease choose what you want to do:</string>
    <string name="tabInstall">Framework</string>
    <string name="tabInstallDescription">Here you can manage the Xposed Framework, which is required for any modules to work.</string>
    <string name="tabModules">Modules</string>
    <string name="tabModulesDescription">The Framework itself doesn\'t add any functionality. You need modules for that. In this section you can activate modules after you have installed them.</string>
    <string name="tabDownload">Download</string>
    <string name="tabDownloadDescription">This section gives you access to a repository of modules, so you can search and download the ones you like and keep them up to date.</string>
    <string name="welcome_framework_update_available">An update for the Xposed Framework is available (%s).</string>
    <string name="welcome_update_available">One or more update(s) for modules available.</string>
    <string name="tabSettings">Settings</string>
    <string name="tabSettingsDescription">Go to this section to configure the Xposed Installer and Framework.</string>
    <string name="tabSupport">Support</string>
    <string name="tabSupportDescription">Find help for Xposed-related issues. You can also donate to say thanks for Xposed.</string>
    <string name="tabLogs">Logs</string>
    <string name="tabLogsDescription">Display and save/send logs of the Xposed Framework.</string>
    <string name="tabAbout">About</string>
    <string name="tabAboutDescription">Learn about the people who created Xposed, where to get support for this app etc.</string>
    <string name="nav_item_install">Framework</string>
    <string name="nav_item_modules">Modules</string>
    <string name="nav_item_download">Download</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_support">Support</string>
    <string name="nav_item_logs">Logs</string>
    <string name="nav_item_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="install">Install/Update</string>
    <string name="uninstall">Uninstall</string>
    <string name="installedVersion">active</string>
    <string name="latestVersion">bundled</string>
    <string name="versions">Versions:</string>
    <string name="install_header_reboot">Reboot</string>
    <string name="soft_reboot">Soft reboot</string>
    <string name="reboot">Reboot</string>
    <string name="areyousure">Are you sure?</string>
    <string name="phone_not_compatible">Xposed is not (yet) compatible with Android SDK version %1$d or your processor architecture (%2$s).</string>
    <string name="not_tested_but_compatible">Xposed has not been tested with Android SDK version %d, but it seems to be compatible. You can try installing it if you feel adventurous.</string>
    <string name="reboot_failed">Reboot failed. Please use the device\'s normal reboot function.</string>
    <string name="auto_flash_note">%s should be flashed automatically once you press "OK".</string>
    <string name="manual_flash_note">Please flash %s from the SD card to complete the operation.</string>
    <string name="reboot_confirmation">Do you want to reboot now?</string>
    <string name="reboot_recovery_confirmation">Do you want to reboot to recovery now?</string>
    <string name="install_warning_title">Be careful!</string>
    <string name="install_warning">In some cases, your device might no longer boot after installing Xposed.\n\nIf you never heard about \"soft brick\" and \"bootloop\" before or if you don\'t know how to recover from such a situation, do <b>NOT</b> install Xposed!\n\nIn any case, having a recent backup is highly recommended.</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="install_known_issue">There seems to be a known issue (\"%s\") with your ROM. Installing Xposed might not work or lead to severe problems. Click here for details about the issue.</string>
    <string name="install_reverted">app_process version \"%1$s\" has been installed previously but version \"%2$s\" was found now. If you didn\'t expect an old file to be restored, you might want to try installing via recovery (auto or manual).</string>
    <string name="uninstall_reverted">app_process was uninstalled previously but version \"%s\" was found now. If you didn\'t expect an old file to be restored, you might want to try uninstalling via recovery (auto or manual).</string>
    <string name="tap_to_dismiss">Tap to dismiss</string>
    <string name="sdcard_location">SD card: %s</string>
    <string name="installation_lollipop">The Xposed Framework is not installed. Please download the latest ZIP file from XDA and flash it manually via recovery.</string>
    <string name="installed_lollipop">Xposed Framework version %s is active.</string>
    <string name="installed_lollipop_inactive">Xposed Framework version %s is installed, but not active. Please check the logs for details.</string>
    <string name="modules_updates_available">Module update(s) are available</string>
    <string name="root_failed">Failed to get root access.\n\nMake sure your device is rooted properly and you have not blocked shell commands.</string>
    <string name="file_extract_failed">Could not extract %s</string>
    <string name="file_mounting_writable">Mounting %s writable&#8230;</string>
    <string name="file_mount_writable_failed">Could not mount %s writable</string>
    <string name="file_trying_to_continue">Trying to continue anyway&#8230;</string>
    <string name="file_backup_already_exists">Backup already exists at %s</string>
    <string name="file_backup_not_found">No backup found at %s</string>
    <string name="file_backup_failed">Failed to create a backup of %s</string>
    <string name="file_backup_successful">Created backup at %s</string>
    <string name="file_backup_restoring">Restoring backup from %s</string>
    <string name="file_copying">Copying %s&#8230;</string>
    <string name="file_copy_failed">Could not copy %1$s to %2$s</string>
    <string name="file_move_failed">Could not move %1$s to %2$s</string>
    <string name="file_set_perms_failed">Could not set permissions for %s</string>
    <string name="file_set_owner_failed">Could not set owner for %s</string>
    <string name="file_removing">Removing %s&#8230;</string>
    <string name="file_remove_failed">Could not remove %s</string>
    <string name="file_creating_directory">Creating directory %s&#8230;</string>
    <string name="file_create_directory_failed">Could not create directory %s</string>
    <string name="file_writing_recovery_command">Writing recovery command&#8230;</string>
    <string name="file_writing_recovery_command_failed">Writing recovery command failed. Please use a different installation method.</string>
    <string name="file_done">Done! Changes will become active on reboot.</string>
    <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
    <string name="module_is_not_activated_yet_detailed">%s has been installed, but is not activated yet.</string>
    <string name="activate_and_reboot">Activate and reboot</string>
    <string name="module_activated">Xposed module has been activated</string>
    <string name="module_empty_description">(no description provided)</string>
    <string name="module_no_ui">This module does not provide a user interface</string>
    <string name="no_xposed_modules_found">No Xposed modules were found!</string>
    <string name="xposed_module_list_updated">Xposed module list was updated\nChanges will become active on reboot</string>
    <string name="xposed_module_updated_notification_title">Xposed module updated</string>
    <string name="xposed_module_updated_notification">Reboot to activate changes</string>
    <string name="warning_xposed_min_version">This module requires a newer XposedBridge version (%d) and thus cannot be activated.</string>
    <string name="no_min_version_specified">This module does not specify the XposedBridge version it needs.</string>
    <string name="warning_min_version_too_low">This module was created for XposedBridge version %1$d, but due to incompatible changes in version %2$d, it has been disabled.</string>
    <string name="module_launch">Launch UI</string>
    <string name="module_download_updates">Download/Updates</string>
    <string name="settings_group_installation">Installation</string>
    <string name="settings_install_mode">Installation mode</string>
    <string name="settings_group_download">Download</string>
    <string name="settings_release_type">Versions to be shown</string>
    <string name="settings_group_experimental">Experimental</string>
    <string name="settings_disable_resources">Disabled resource hooks</string>
    <string name="settings_disable_resources_summary">Workaround for conflicts with theming engines\n<b>WARNING:</b> Modules which try to change resources will not work when this is enabled.</string>
    <string name="settings_group_app">Application</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_default_view">Default view</string>
    <string name="download_view_download">Download</string>
    <string name="download_view_install">Install</string>
    <string name="download_view_cancel">Cancel</string>
    <string name="choose_color">Choose a color…</string>
    <string name="export_">Export…</string>
    <string name="import_">Import…</string>
    <string name="export_enabled_modules">Export enabled modules list</string>
    <string name="import_enabled_modules">Import enabled modules list</string>
    <string name="export_installed_modules">Export installed modules list</string>
    <string name="import_installed_modules">Import installed modules list</string>
    <string name="enable_heads_up">Enable Heads-Up notification</string>
    <string name="enable_heads_up_summary">This option enables heads up notification on new/updated module</string>
    <string name="nav_bar_coloration">Colorate navigation bar</string>
    <string name="help">Help</string>
    <string name="newVersion">New version of Xposed Installer is available! Update it!</string>
    <string name="update">Update</string>
    <string name="choose_icon">Choose an icon</string>
    <string name="custom_icon">Custom icon</string>
    <string name="notify_module_update">Enable module update notification</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notification_coloration">Colorate notification icon</string>
    <string name="install_with_su">Install module with root</string>
    <string name="install_with_su_summ">If checked Xposed Installer will install modules without a prompt</string>
    <string name="ignore_updates">Ignore update</string>
    <string name="ignore_updates_summ">Ignore updates for a specific module.</string>
    <string name="reboot_recovery">Reboot to recovery</string>
    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
    <string name="chrome_custom_tabs_summ">Open links in internal browser</string>
    <string name="open_drawer_summ">Open automatically the navigation drawer at startup</string>
    <string name="open_drawer">Open automatically navigation drawer</string>
    <string name="update_interval">Background update check interval</string>
    <string name="confirm_reboots">Confirm reboots</string>
    <string name="skip_xposedminversion_check">Skip \'xposedminversion\' check</string>
</resources>