<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="group_installation"
        android:title="@string/settings_group_installation">

        <de.robv.android.xposed.installer.widget.IntegerListPreference
            android:defaultValue="1"
            android:entries="@array/install_mode_texts"
            android:entryValues="@array/install_mode_values"
            android:key="install_mode"
            android:summary="%s"
            android:title="@string/settings_install_mode"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="group_download"
        android:title="@string/settings_group_download">

        <de.robv.android.xposed.installer.widget.ListPreferenceSummaryFix
            android:defaultValue="stable"
            android:entries="@array/release_type_texts"
            android:entryValues="@array/release_type_values"
            android:key="release_type_global"
            android:summary="%s"
            android:title="@string/settings_release_type"/>

        <de.robv.android.xposed.installer.widget.ListPreferenceSummaryFix
            android:defaultValue="3"
            android:entries="@array/update_text"
            android:entryValues="@array/update_values"
            android:key="update_service_interval"
            android:summary="%s"
            android:title="@string/update_interval"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="group_app"
        android:title="@string/settings_group_app">

        <de.robv.android.xposed.installer.widget.IconListPreference
            android:defaultValue="0"
            android:entries="@array/icons"
            android:entryValues="@array/iconsValues"
            android:key="custom_icon"
            android:summary="@string/choose_icon"
            android:title="@string/custom_icon"
            app:icons="@array/iconsDrawables"/>

        <de.robv.android.xposed.installer.widget.IntegerListPreference
            android:defaultValue="0"
            android:entries="@array/theme_texts"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:summary="%s"
            android:title="@string/settings_theme"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="confirm_reboots"
            android:title="@string/confirm_reboots"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="skip_xposedminversion_check"
            android:title="@string/skip_xposedminversion_check"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="heads_up"
            android:summary="@string/enable_heads_up_summary"
            android:title="@string/enable_heads_up"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="snack_bar"
            android:title="@string/notify_module_update"/>

        <Preference
            android:key="colors"
            android:title="@string/choose_color"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="nav_bar"
            android:title="@string/nav_bar_coloration"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="colored_notification"
            android:title="@string/notification_coloration"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="chrome_tabs"
            android:summary="@string/chrome_custom_tabs_summ"
            android:title="@string/chrome_custom_tabs"/>

        <de.robv.android.xposed.installer.widget.IntegerListPreference
            android:defaultValue="0"
            android:entries="@array/default_view_texts"
            android:entryValues="@array/default_view_values"
            android:key="default_view"
            android:summary="%s"
            android:title="@string/settings_default_view"/>

        <CheckBoxPreference
            android:key="open_drawer"
            android:summary="@string/open_drawer_summ"
            android:title="@string/open_drawer"/>


    </PreferenceCategory>

    <PreferenceCategory
        android:key="group_experimental"
        android:title="@string/settings_group_experimental">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disable_resources"
            android:persistent="false"
            android:summary="@string/settings_disable_resources_summary"
            android:title="@string/settings_disable_resources"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="install_with_su"
            android:summary="@string/install_with_su_summ"
            android:title="@string/install_with_su"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="ignore_updates"
            android:summary="@string/ignore_updates_summ"
            android:title="@string/ignore_updates"/>

        <!--
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="performance_experiment"
                    android:summary="@string/settings_performance_experiment_summary"
                    android:title="@string/settings_performance_experiment" />
        -->
    </PreferenceCategory>
</PreferenceScreen>