<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/main_items">
        <item
            android:id="@+id/drawer_item_1"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_item_install"/>
        <item
            android:id="@+id/drawer_item_2"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_item_modules"/>
        <item
            android:id="@+id/drawer_item_3"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_item_download"/>
        <item
            android:id="@+id/drawer_item_4"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_item_logs"/>
    </group>
    <group android:id="@+id/option_items">
        <item
            android:id="@+id/drawer_item_5"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_item_settings"/>
        <item
            android:id="@+id/drawer_item_6"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_item_support"/>
        <item
            android:id="@+id/drawer_item_7"
            android:icon="@drawable/ic_notification"
            android:title="@string/nav_item_about"/>
    </group>
</menu>