<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_nav_support"
        android:title="@string/help"
        app:showAsAction="always|withText"/>

    <group>

        <item
            android:id="@+id/reboot"
            android:icon="@drawable/ic_menu_refresh"
            android:title="@string/reboot"/>

        <item
            android:id="@+id/soft_reboot"
            android:icon="@drawable/ic_menu_refresh"
            android:title="@string/soft_reboot"/>

        <item
            android:id="@+id/reboot_recovery"
            android:icon="@drawable/ic_menu_refresh"
            android:title="@string/reboot_recovery"/>

    </group>

</menu>