<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/install_reverted_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:background="?attr/background_card"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/install_reverted_warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/warning"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/tap_to_dismiss"
                android:textStyle="italic"/>
        </LinearLayout>

        <TextView
            android:id="@+id/framework_known_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/warning"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/framework_install_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/warning"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/tabInstall"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/loadingInstallers"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"/>

            <Spinner
                android:id="@+id/chooserInstallers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>

            <ImageView
                android:id="@+id/infoInstaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_info"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnInstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/install"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/loadingUninstallers"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"/>

            <Spinner
                android:id="@+id/chooserUninstallers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>

            <ImageView
                android:id="@+id/infoUninstaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:padding="5dp"
                android:src="@drawable/ic_info"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnUninstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/uninstall"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/settings_install_mode"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/framework_install_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/install_header_reboot"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnSoftReboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soft_reboot"/>

        <Button
            android:id="@+id/btnReboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reboot"/>

        <LinearLayout
            android:id="@+id/updateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newVersion"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_green_dark"/>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>