<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dip"
            android:text="@string/download_view_download"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <Button
            android:id="@+id/btnDownloadCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dip"
            android:text="@string/download_view_cancel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"
            tools:ignore="ButtonOrder"/>

        <Button
            android:id="@+id/btnInstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dip"
            android:text="@string/download_view_install"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</merge>
